@@ -1,18 +1,29 @@
 Version 0.3
 -----------
 * Document UAV::Pilot::Joystick
-* Process SDL events so QUIT is handled properly
 * Command for Joystick
-* Wiimote control (?)
 
 Version 0.4
 -----------
-* Video
+* Save video to file
 * USERBOX:userbox_cmd API
 * Add throttle (vertspeed) indicator to SDL nav output
 * Add current input setting to nav indicators in SDL output
+* Cleanup API
+    * Does Joystick or SDL nav need a condvar anymore?
+    * Override conf file for Joystick
+    * Anything that inits an AnyEvent timer should be named C<init_event_loop>
+    * Joystick interface too tightly integrated to AR.Drone?
+* Allow cutting joystick input by a percentage for easier control
+* Configure reversing of the axis on the joystick
+* Allow other actions to be mapped to joystick buttons (flips and such)
 
-Version 5
+Version 0.5
+-----------
+* Show video in real-time
+* Wiimote control (?)
+
+Version 6
 -----------
 * Error message formatting in REPL
 * Facial Recognition with Image::ObjectDetect
