@@ -1,6 +1,7 @@
 Version 0.3
 -----------
 * Event-based interface
+* Joystick control
 
 Version 0.2
 -----------
